--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,44 +5,25 @@ substitutions:
   _IMAGE: sales-forecast-api
 
 steps:
-  # Build the container image
   - name: "gcr.io/cloud-builders/docker"
-    args:
-      [
-        "build",
-        "-t",
-        "${_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPO}/${_IMAGE}:$SHORT_SHA",
-        ".",
-      ]
+    args: ["build", "-t", "${_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPO}/${_IMAGE}:$SHORT_SHA", "."]
 
-  # Push the image to Artifact Registry
   - name: "gcr.io/cloud-builders/docker"
-    args:
-      [
-        "push",
-        "${_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPO}/${_IMAGE}:$SHORT_SHA",
-      ]
+    args: ["push", "${_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPO}/${_IMAGE}:$SHORT_SHA"]
 
-  # Deploy to Cloud Run
   - name: "gcr.io/cloud-builders/gcloud"
     args:
       [
-        "run",
-        "deploy",
-        "${_SERVICE}",
-        "--image",
-        "${_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPO}/${_IMAGE}:$SHORT_SHA",
-        "--region",
-        "${_REGION}",
-        "--platform",
-        "managed",
+        "run","deploy","${_SERVICE}",
+        "--image","${_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPO}/${_IMAGE}:$SHORT_SHA",
+        "--region","${_REGION}",
+        "--platform","managed",
         "--allow-unauthenticated",
-        "--port",
-        "8000",
-        "--memory",
-        "2Gi",
-        "--cpu",
-        "1",
-        "--timeout",
-        "900",
+        "--port","8000",
+        "--memory","2Gi",
+        "--cpu","1",
+        "--timeout","900"
       ]
+
+options:
+  logging: CLOUD_LOGGING_ONLY
